Kubernetes/headless.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres-headless
  namespace: cloudcart-ns

spec:
  clusterIP: None

  selector:
    app: web

  ports:
  - port: 80
    targetPort: 80
